@@ -1,36 +1,0 @@
-{
-  "category_list": [
-    {
-      "id": "10",
-      "url": "http://www.caothang.edu.vn/",
-      "icon": "https://png.pngtree.com/svg/20170330/cbeb034c9e.png",
-      "text": "CKC 10"
-    },
-    {
-      "id": "2",
-      "url": "https://www.youtube.com/",
-      "icon": "https://upload.wikimedia.org/wikipedia/commons/thumb/7/73/Flat_tick_icon.svg/1200px-Flat_tick_icon.svg.png",
-      "text": "CKC 2"
-    },
-    {
-      "id": "3",
-      "url": "https://www.google.com/",
-      "icon": "https://upload.wikimedia.org/wikipedia/commons/thumb/7/73/Flat_tick_icon.svg/1200px-Flat_tick_icon.svg.png",
-      "text": "CKC 3"
-    },
-    {
-      "id": "4",
-      "url": "https://www.facebook.com/",
-      "icon": "https://png.pngtree.com/svg/20170720/d11172979e.png",
-      "text": "CKC 4"
-    }
-  ],
-  "homepage_image_list": [
-    "https://picsum.photos/900/500",
-    "https://picsum.photos/900/500",
-    "https://picsum.photos/900/500",
-    "https://picsum.photos/900/500",
-    "https://picsum.photos/900/500",
-    "https://picsum.photos/900/500"
-  ]
-}
